--- a/playbooks/roles/nginx/templates/edx/app/nginx/sites-available/lms.j2
+++ b/playbooks/roles/nginx/templates/edx/app/nginx/sites-available/lms.j2
@@ -26,6 +26,12 @@ server {
 
   rewrite ^(.*)/favicon.ico$ /static/images/favicon.ico last;
 
+  location '/.well-known/acme-challenge' {
+    allow all;
+    default_type "text/plain";
+    root /var/www/letsencrypt;
+  }
+
   location @proxy_to_lms_app {
         proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
     proxy_set_header X-Forwarded-Port $http_x_forwarded_port;
